--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
   <groupId>com.github.zabetak</groupId>
   <artifactId>jdbc-faulty</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
   <packaging>jar</packaging>
   <name>jdbc-faulty</name>
 
